Made selection transparent to avoid elements being visibly selected.

--- a/styles/deck.css
+++ b/styles/deck.css
@@ -62,10 +62,11 @@
     border-radius: 10%;
 }
 
+::selection {
+    background-color: transparent;
+}
+
 .card-center-symbol {
     font-size: 16ex;
 }
 
-.card-is-clickable {
-    cursor: pointer;
-}
