--- a/styles/main.css
+++ b/styles/main.css
@@ -116,3 +116,16 @@ body {
 .clickable {
     cursor: pointer;
 }
+
+/* .unselectable {
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+} */
+
+::selection {
+    background-color: transparent;
+}
